config for string node

--- a/lib/todo.txt
+++ b/lib/todo.txt
@@ -42,6 +42,7 @@ X save node path in completion to fix help string
 X use vec for strvec
 - ELOOP in case of loop
 - remove weakref?
+- sh_lex to provide offsets in attributes
 
 dependencies
 ============
